# fast-permute

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: build.yml  wheels.yml
benchmark/: CMakeLists.txt  debug_min_vertex_cover.cpp  get_factor_nnz.cpp  get_factor_nnz.h  ordering_benchmark.cpp
benchmark/LinSysSolvers/: CUDSSSolver.hpp  LinSysSolver.cpp  LinSysSolver.hpp  MKLSolver.cpp  STRUMPACKSolver.cpp  STRUMPACKSolver.hpp
benchmark/etree_analysis/: etree_analysis.cpp  etree_analysis_utils.h
benchmark/multiple_factorization/: CMakeLists.txt  data_smoothing_benchmark.cpp  inverse_rendering_benchmark.cpp  ipc_benchmark.cpp  mesh_smoothing_benchmark.cpp  patch_remeshing_benchmark.cpp  scp_benchmark.cpp  slim_benchmark.cpp
benchmark/multiple_factorization/utils/: createPatch.h  inverse_rendering_prep_benchmark.h  ipc_prep_benchmark.h  remesh_the_patch.h  scp_prep_benchmark.h  slim_prep_benchmark.h  update_perm_with_boundary.h
benchmark/patch_metrics/: CMakeLists.txt  compare_patching.cpp
benchmark/render_helper/: gen_sep_data.cpp  save_mat_and_permute_mat.cpp
benchmark/render_helper/utils/: create_patch_with_metis.h
benchmark/single_factorization/: general_benchmark.cu  tet_mesh_laplace_benchmark.cpp  tri_mesh_laplace_benchmark.cpp
cmake/recipes/: cholmod.cmake  cudss.cmake  lloyd_clustering.cmake  metis.cmake  metis_tls_patch.cmake  mkl.cmake  nanobind.cmake  parth.cmake  suitesparse.cmake
data/suitesparse_spd/: manifest.csv
examples/: CMakeLists.txt  README.md  cholmod_example.cpp  cleanup_mesh.h  cudss_example.cpp  matrix_example.cpp  mkl_example.cpp  python_solve.py  util.h
examples/LinSysSolvers/: CHOLMODSolver.cpp  CHOLMODSolver.hpp  CUDSSSolver.cu  LinSysSolver.cpp  LinSysSolver.hpp  MKLSolver.cpp  MKLSolver.hpp
include/homa/: homa.h  matrix_view.h  ordering.h  patcher.h  types.h
include/homa/ordering/: amd_order_helper.h  cpu_ordering_with_patch.h
include/homa/patching/: greedy_patcher.h  lloyd_patcher.h  metis_patcher.h
include/homa/solvers/: CHOLMODSolver.h  CUDSSSolver.h  LinSysSolver.h  MKLSolver.h  scalar_traits.h
include/homa/utils/: SPD_cot_matrix.h  check_valid_permutation.h  compress_hessian.h  compute_inverse_perm.h  cuda_error_handler.h  min_vertex_cover_bipartite.h  nvtx_helper.h  remove_diagonal.h
python/: CMakeLists.txt  README.md
python/homa/: __init__.py  _dll.py
python/homapy/: __init__.py  _dll.py
python/src/: homa_bindings.cpp  homapy_bindings.cpp
scripts/: download_suitesparse_spd.py
scripts/benchmark/app/: data_smoothing_benchmark.sh  inverse_benchmark.sh  inverse_benchmark_smoke.sh  mesh_smoothing_benchmark.sh  runAll.sh  scp_benchmark.sh  slim_benchmark.sh
scripts/benchmark/patch_analysis/: compare_patching_benchmark.sh
scripts/benchmark/single_factorization/: planer_benchmark.sh  tri_laplace_benchmark.sh
scripts/examples/: run_cholmod_example.sh  run_cudss_example.sh  run_mkl_example.sh  run_spd_benchmark.cmd  run_spd_benchmark.sh
src/LinSysSolvers/: CUDSSSolver.cu
src/Ordering/: patch_ordering.cu
src/ordering/: amd_order_helper.cpp  cpu_ordering_with_patch.cpp  cpu_ordering_with_patch.h  gpu_ordering_with_patch.cu  gpu_ordering_with_patch.h  homa.cpp  neutral_ordering.cpp  neutral_ordering.h  ordering_factory.cu  ordering_factory.h  parth_ordering.cpp  parth_ordering.h  patch_ordering.cu  patch_ordering.h
src/patching/: greedy_patcher.cpp  greedy_patcher.h  lloyd_patcher.cpp  lloyd_patcher.h  metis_patcher.cpp  metis_patcher.h  rxmesh_patcher.cu  rxmesh_patcher.h
src/solvers/: CHOLMODSolver.cpp  CUDSSSolver.cu  LinSysSolver.cpp  MKLSolver.cpp  scalar_traits.h
src/utils/: SPD_cot_matrix.h  check_valid_permutation.cpp  check_valid_permutation.h  compress_hessian.cpp  compute_inverse_perm.cpp  csv_utils.h  cuda_error_handler.h  min_vertex_cover_bipartite.cpp  remove_diagonal.cpp  remove_diagonal.h  save_vector.h
tests/: CMakeLists.txt
tests/ordering/: CMakeLists.txt  test_linsys_solver_api.cpp  test_patch_ordering_etree.cpp
tests/python/: test_solver_perm_refactor.py
tests/solvers/: CMakeLists.txt  test_solver_perm_refactor.cpp
tools/Remesher/: remesher.cpp
